--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,16 @@ body {
 #tasklist::-webkit-scrollbar {
     display: none;
 }
+/* custom-scrollbar */
+.custom-scrollbar::-webkit-scrollbar {
+    width: 8px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: rgba(100, 100, 100, 0.4);
+    border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(100, 100, 100, 0.6);
+}
